--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.8",
     "espress": "^0.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.4",
     "slugify": "^1.6.5"
